Adding test package for @solo-1234 to try to address parent-level fields being reset after their values are correctly rolled up during full recalcs

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -602,6 +602,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
 
   public virtual void storeParentResetField(RollupAsyncProcessor processor, SObject parent) {
     this.previouslyResetParents.add(this.getParentResetKey(String.valueOf(processor.opFieldOnLookupObject), parent));
+    this.fullRecalcProcessor?.storeParentResetField(processor, parent);
   }
 
   private String getParentResetKey(String fieldKey, SObject parent) {
