Always add CurrencyIsoCode to queries for multi-currency orgs to fix #329

--- a/extra-tests/classes/RollupQueryBuilderTests.cls
+++ b/extra-tests/classes/RollupQueryBuilderTests.cls
@@ -98,4 +98,13 @@ private class RollupQueryBuilderTests {
     // validate query can be run
     Database.query(queryString);
   }
+
+  @IsTest
+  static void multiCurrencyOrgsAlwaysAddIsoCode() {
+    RollupCurrencyInfo.IS_MULTICURRENCY = true;
+
+    String queryString = RollupQueryBuilder.Current.getQuery(Account.SObjectType, new List<String>(), 'Id', '=');
+
+    System.assertEquals(true, queryString.contains(RollupCurrencyInfo.CURRENCY_ISO_CODE_FIELD_NAME));
+  }
 }
