WIP for improving upon full recalcs affect - or lack thereof - on parent-level fields being reset

--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -349,6 +349,54 @@ private class RollupFullRecalcTests {
   }
 
   @IsTest
+  static void doesNotUpdateParentRecordsWhereRollupValueHasNotChangedInFullRecalc() {
+    RollupTestUtils.DMLMock mock = new RollupTestUtils.DMLMock();
+    Rollup.DML = mock;
+
+    Account acc = [SELECT Id FROM Account];
+    Account secondParent = new Account(Name = 'Second');
+    insert secondParent;
+    List<ContactPointAddress> cpas = new List<ContactPointAddress>{
+      // ensure another matching item exists outside of the passed in list
+      new ContactPointAddress(PreferenceRank = 500, ParentId = acc.Id, Name = 'One'),
+      // ensure that the PreferenceRank associated with the second parent DOES match
+      // the second parent's existing annual revenue; here we are looking to ensure only the parent records needing an update are saved
+      new ContactPointAddress(ParentId = secondParent.Id, Name = 'Two')
+    };
+    insert cpas;
+
+    List<Rollup__mdt> metadata = new List<Rollup__mdt>{
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        RollupOperation__c = 'SUM',
+        RollupFieldOnLookupObject__c = 'AnnualRevenue',
+        RollupFieldOnCalcItem__c = 'PreferenceRank',
+        LookupFieldOnLookupObject__c = 'Id',
+        CalcItemWhereClause__c = 'Name != \'Two\''
+      ),
+      new Rollup__mdt(
+        CalcItem__c = 'ContactPointAddress',
+        LookupObject__c = 'Account',
+        LookupFieldOnCalcItem__c = 'ParentId',
+        RollupOperation__c = 'COUNT',
+        RollupFieldOnLookupObject__c = 'NumberOfEmployees',
+        RollupFieldOnCalcItem__c = 'Id',
+        LookupFieldOnLookupObject__c = 'Id'
+      )
+    };
+
+    Test.startTest();
+    Rollup.performBulkFullRecalc(metadata, Rollup.InvocationPoint.FROM_FULL_RECALC_LWC.name());
+    Test.stopTest();
+
+    Map<Id, SObject> updatedRecordMap = new Map<Id, SObject>(mock.Records);
+    System.assertEquals(1, updatedRecordMap.size());
+    System.assertEquals(true, updatedRecordMap.containsKey(acc.Id));
+  }
+
+  @IsTest
   static void shouldPerformFullRecalcWithGrandparentHierarchyFlow() {
     Rollup.onlyUseMockMetadata = true;
     Account acc = [SELECT Id FROM Account];
